# derivx-fic-analytics

./: .gitignore  Dockerfile  GITHUB_SETUP.md  Procfile  README.md  pyproject.toml  render.yaml  requirements.txt
.devcontainer/: devcontainer.json
.github/: last-ping.txt
.github/workflows/: ci.yaml  keep-alive.yml  wake-streamlit.yml
data/examples/: equity_chain.csv  rates_quotes.csv
notebooks/: 01_calibrate_svi_equity.ipynb  02_calibrate_sabr_fx.ipynb  03_term_structure_and_black_ir.ipynb
src/derivx/: __init__.py
src/derivx/calibration/: __init__.py  production.py
src/derivx/core/: __init__.py  bs.py  common.py
src/derivx/data/: __init__.py  ingestion.py  market_data.py
src/derivx/models/: __init__.py  comparison.py
src/derivx/rates/: __init__.py  black_ir.py  term_structure.py
src/derivx/risk/: __init__.py  metrics.py
src/derivx/surface/: __init__.py  term_structure.py
src/derivx/ui/: streamlit_app.py
src/derivx/validation/: __init__.py  backtest.py
src/derivx/vol/: __init__.py  implied.py  sabr.py  svi.py
tests/: test_backtest.py  test_black_ir.py  test_bs.py  test_calibration_production.py  test_implied.py  test_market_data.py  test_model_comparison.py  test_risk.py  test_svi.py  test_term_structure.py
tools/: compute_metrics.py  download_spy_chains.py
tools/keep_alive/: main.py  requirements.txt
